--- a/style/index.css
+++ b/style/index.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     scroll-behavior: smooth;
-    box-sizing: border-box;
+    box-sizing: border-box;   
 }
 
 body {
@@ -147,19 +147,24 @@ body {
     gap: 0.8rem;
 }
 
+
+.step-active {
+    padding: 0.7rem 1rem;
+    display: inline-block;
+    background: white;
+    color: black;
+    border-radius: 8px;
+    text-decoration: none;
+    font-weight: bold;
+    transition: background 0.3s ease;
+}
+
 .step {
     background: rgba(255, 255, 255, 0.08);
     padding: 0.7rem 1rem;
     border-radius: 10px;
     font-size: 0.9rem;
     transition: 0.3s ease;
-}
-
-.step.active {
-    background: white;
-    color: black;
-    font-weight: 600;
-    transform: scale(1.03);
 }
 
 .right-panel {
@@ -542,7 +547,7 @@ body.light-mode .step {
     color: black;
 }
 
-body.light-mode .step.active {
+body.light-mode .step-active {
     background: #9333ea;
     color: white;
 }
